fixed formatting issues on mobile

--- a/styles/sass/partials/shared/_mediaQueries.scss
+++ b/styles/sass/partials/shared/_mediaQueries.scss
@@ -1,6 +1,5 @@
 @use "./variables" as *;
 
-//tablet landscape
 @media (max-width: 1024px) {
     html.home {
         .headerImage {
@@ -56,7 +55,8 @@
             width: 100%;
         }
         .contactInfo {
-            transform: translateY(0vh);
+            // transform: translateY(0vh);
+            transform: translateY(clamp(-100px, -30vh, 300px));
             text-align: center;
             padding: 0;
             .socialMedia {
@@ -66,7 +66,6 @@
     }
 }
 
-//tablet
 @media (max-width: 768px) {
     header {
         .hamburger {
@@ -101,7 +100,6 @@
         width: 100%;
     }
     html.home {
-        
         .gallery {
             .wrapper {
                 flex-direction: column;
@@ -139,7 +137,6 @@
     }
 }
 
-//large mobile
 @media (max-width: 480px) {
     header {
         height: clamp(300px, 90vh, 500px);
@@ -148,6 +145,9 @@
         .headerContent {
             height: 45vh;
             min-height: 230px;
+        }
+        .items {
+            flex-wrap:nowrap;
         }
         .gallery {
             display: none;
@@ -163,9 +163,19 @@
     }
 }
 
-//mobile
 @media (max-width: 360px) {
     input::placeholder, textarea::placeholder {
         font-size: calc(1 * $baseFontSize);
+    }
+    html.home {
+        .items {
+            flex-wrap: wrap;
+            text-align: center;
+            .iconContainer {
+                padding-bottom: 10px;   
+                display: flex;
+                justify-content: center;
+            }
+        }
     }
 }
