--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1055,8 +1055,8 @@ html.contact h1 {
     width: 100%;
   }
   html.contact .contactInfo {
-    -webkit-transform: translateY(0vh);
-            transform: translateY(0vh);
+    -webkit-transform: translateY(clamp(-100px, -30vh, 300px));
+            transform: translateY(clamp(-100px, -30vh, 300px));
     text-align: center;
     padding: 0;
   }
@@ -1149,6 +1149,10 @@ html.contact h1 {
     height: 45vh;
     min-height: 230px;
   }
+  html.home .items {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
   html.home .gallery {
     display: none;
   }
@@ -1177,5 +1181,19 @@ html.contact h1 {
   }
   input::placeholder, textarea::placeholder {
     font-size: 1rem;
+  }
+  html.home .items {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    text-align: center;
+  }
+  html.home .items .iconContainer {
+    padding-bottom: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
